--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
         <title> Luke's Great Website</title>
     </head>
     <body>
-        <p> "Hello World" </p>
+        <p> WHATUP PIMPS </p>
     </body>
 </html>
