--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
         <title> Luke's Great Website</title>
     </head>
     <body>
-        <p> WHATUP PIMPS </p>
+        <p> p1</p>
+        <p> p2 </p>
+        <div> d1 </div>
+        <div> d2 </div>
     </body>
 </html>
