--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
         <p> p2 </p>
         <div> d1 </div>
         <div> d2 </div>
+        <span> S1 </span>
+        <span> S2 </span>
     </body>
 </html>
