--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
         <title> Luke's Great Website</title>
     </head>
     <body>
-        <p> p1</p>
-        <p> p2 </p>
-        <div> d1 </div>
-        <div> d2 </div>
-        <span> S1 </span>
-        <span> S2 </span>
+       <h1> Luke's Morning To Do List</h1>
+        <ol> 
+        <li>Wake Up</li>
+        <li>Get Dressed</li>
+        <li>Eat Breakfast</li>
+        <li>Brush Teeth</li>
+        </ol>
     </body>
 </html>
