--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     </head>
     <body>
        <h1> Luke's Morning To Do List</h1>
-        <ol> 
-        <li>Wake Up</li>
-        <li>Get Dressed</li>
-        <li>Eat Breakfast</li>
-        <li>Brush Teeth</li>
-        </ol>
+        <ul>
+            <li><input type ="checkbox">Wake Up</li>
+            <li><input type ="checkbox">Get Dressed</li>
+            <li><input type ="checkbox">Eat Breakfast</li>
+            <li><input type ="checkbox">Brush Teeth</li>
+        </ul>
+       <input type = "text" placeholder = "Add a new item">
+       <input type = "number" placeholder = "# of Pomodoros">
+       <input type = "submit" value = Add todo>
     </body>
 </html>
