--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
        <h1> Luke's Morning To Do List</h1>
         <ul>
             <li><input type ="checkbox"><a href= "show.html">Wake Up</a>
-            <span class="box-two"> 1 pomodoros </span>
+            <span class="pomodoros"> 1 pomodoros </span>
             </li>
             <li><input type ="checkbox"><a href= "show.html">Get Dressed<a/>
             <span class = "pomodoros"> 1 pomodoros </span>
@@ -16,7 +16,7 @@
             <span class = "pomodoros"> 2 pomodoros </span>
             </li>
             <li><input type ="checkbox"><a href= "show.html">Brush Teeth<a/>
-            <span class = "box-one"> 1 pomodoros </span>
+            <span class = "pomodoros"> 1 pomodoros </span>
             </li>
             
             
